# simple-audio-capture-wasapi

./: CMakeLists.txt  WaveWriter.cc  WaveWriter.h  audio_fft.hpp  audio_stream.hpp  audio_stream_test.cc  audio_thread.cc  audio_thread.h  audio_thread_test.cc  plot.py  render_capture.cc  wasapi_cap.cc  wasapi_cap.h  wasapi_cap_test.cc
libfft/: CMakeLists.txt  kiss_fft.c
libwav/: CMakeLists.txt  wave_writer.cc  wave_writer.h
test/: .clangd  CMakeLists.txt  audio_stream_test.cc  audio_thread_test.cc  fftr_test.cc  scratch.cc
